--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "serve-json": "json-server db.json --port 3004 --routes routes.json"
+    "serve-json": "json-server db.json --port 3004 --routes routes.json",
+    "test": "vitest --coverage"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -26,12 +27,15 @@
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-istanbul": "^1.1.0",
+    "@vitest/coverage-v8": "^1.0.4",
     "dotenv": "^16.3.1",
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
     "json-server": "^0.17.4",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "vitest": "^1.0.4"
   }
 }
