Switched to mocks-server as a default mock server

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tifinagh-converter-frontend-react",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "vite",
     "dev-serve-json": "concurrently \"vite\" \"npm run serve-json\"",
@@ -10,7 +10,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "serve-json": "json-server db.json --port 3004 --routes routes.json",
-    "test": "vitest --coverage"
+    "test": "vitest --coverage",
+    "mocks" : "mocks-server"
   },
   "dependencies": {
     "axios": "^1.6.2",
